--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #creates the DB tables for you
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 # finds the source database
 spring.datasource.url=jdbc:mysql://localhost:3306/inkd?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 # accesses the DB with username and password
 spring.datasource.username=root
-spring.datasource.password=Daisydonegan*12
+spring.datasource.password=mysql
 
 #a bridge between Java JDBC types and SQL types, which contains mapping between java language data type and database datatype
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 # Allows circular references
