Change JPA / HIBERNATE app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,12 @@ spring.datasource.username=root
 spring.datasource.password=mysql
 
 #a bridge between Java JDBC types and SQL types, which contains mapping between java language data type and database datatype
+#JPA / HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Allows circular references
 spring.main.allow-circular-references = true
