--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inkd?useSSL=false&useUnicode=y
 
 # accesses the DB with username and password
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root@mac
 
 #a bridge between Java JDBC types and SQL types, which contains mapping between java language data type and database datatype
 #JPA / HIBERNATE
@@ -29,3 +29,7 @@ app.jwt.expiration-in-ms=3600000
 
 #1 day
 app.jwt.refresh-expiration-in-ms=86400000
+
+#SocketLabs
+socketlab.server.id=46329
+socketlab.injection.api.Key=Tq32Agd7D6JwSj9r8BWs
