Fix:Circular dependancy error resolved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inkd?useSSL=false&useUnicode=y
 
 # accesses the DB with username and password
 spring.datasource.username=root
-spring.datasource.password=root@mac
+spring.datasource.password=Daisydonegan*12
 
 #a bridge between Java JDBC types and SQL types, which contains mapping between java language data type and database datatype
 #JPA / HIBERNATE
